<resources>
    <string name="app_name">Organizer</string>

    <!-- Login Activity -->
    <string name="login_text">Login:</string>
    <string name="password_text">Password:</string>
    <string name="code_text">Input code:</string>

    <string name="forgot_btn">Forgot Password?</string>
    <string name="login_btn">Log In</string>
    <string name="no_account"><u>Don\'t have an account? Register here!</u></string>


    <!-- Register Activity -->

    <string name="confirm_password_text">Confirm password:</string>
    <string name="password_hint">Hint:</string>
    <string name="register_btn">Register</string>
    <string name="already_account"><u>Already have an account? Login here!</u></string>
    <string name="todo">TODO</string>
    <string name="wyloguj">Log Out</string>
    <string name="Calender">Calender</string>
    <string name="back">Back</string>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>
